# protoc-gen-go-mcp

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  TODO.md  Taskfile.yml  go.mod  go.sum  justfile  nogo_config.json  tools.go
.github/workflows/: test.yml
cmd/protoc-gen-go-mcp/: BUILD.bazel  main.go
conformancetest/: BUILD.bazel  aisdk_conformance_test.go  anthropic_conformance_test.go  conformance_test.go  offline_schema_test.go  openai_conformance_test.go  openai_recursive_test.go
example/: main.go
example-openai-compat/: buf.gen.yaml
example/proto/: mcp
example/proto/example/v1/: example.proto
examples/basic/: BUILD.bazel  README.md  main.go
examples/dynamic/: BUILD.bazel  main.go
examples/gosdk/: BUILD.bazel  main.go
examples/openai-compat/: BUILD.bazel  README.md  main.go
examples/with-annotations/: main.go
integrationtest/: BUILD.bazel  README.md  openai_integration_test.go
pkg/generator/: BUILD.bazel  annotation_test.go  buf.yaml  compatibility_test.go  e2e_test.go  edge_cases_test.go  extra_properties_integration_test.go  generator.go  generator_test.go  golden_test.go  handler_e2e_test.go  handler_rtt_test.go  integration_test.go  openai_map_bug_test.go  openai_schema_bug_test.go
pkg/openai/: fix.go
pkg/runtime/: BUILD.bazel  annotations.go  annotations_test.go  decode_fuzz_test.go  error.go  error_edge_cases_test.go  error_test.go  error_wrapped_bug_test.go  extra_properties.go  extra_properties_edge_cases_test.go  extra_properties_openai_test.go  extra_properties_test.go  file_mode.go  file_mode_test.go  fix.go  fix_bug_hunt_test.go  fix_edge_cases_extra_test.go  fix_edge_cases_test.go  fix_fuzz_test.go  fix_openai_with_extra_field_reproducer_test.go  fix_optional_bug_test.go  fix_test.go  fix_wkt_bug_test.go  fix_wkt_wrapper_test.go  fixopenai_extra_field_test.go  mcp_path_param_bug_test.go  server.go  transform.go  transform_test.go  transform_wkt_test.go  url_corruption_reproducer_test.go  yaml_url_corruption_test.go
pkg/runtime/gosdk/: BUILD.bazel  server.go
pkg/runtime/mark3labs/: BUILD.bazel  server.go
pkg/testdata/: buf.gen.golden.yaml  buf.gen.yaml  buf.yaml
pkg/testdata/proto/mcp/v1/: file.proto
pkg/testdata/proto/testdata/: edge_cases.proto  mcp_reproducer.proto  test_service.proto
proto/: buf.gen.yaml  buf.yaml
proto/mcp/: annotations.proto
proto/mcp/v1/: annotations.pb.go  annotations.proto
