module(
    name = "protoc-gen-go-mcp",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "com_connectrpc_connect",
    "com_github_anthropics_anthropic_sdk_go",
    "com_github_mark3labs_mcp_go",
    "com_github_onsi_gomega",
    "com_github_openai_openai_go",
    "com_github_redpanda_data_common_go_api",
    "com_github_santhosh_tekuri_jsonschema_v5",
    "org_golang_google_genai",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
