load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "conformancetest_test",
    srcs = [
        "anthropic_conformance_test.go",
        "conformance_test.go",
        "openai_conformance_test.go",
    ],

    deps = [
        "//pkg/runtime",
        "//pkg/testdata/gen/go/testdata",
        "//pkg/testdata/gen/go/testdata/testdatamcp",
        "@com_github_anthropics_anthropic_sdk_go//:anthropic-sdk-go",
        "@com_github_anthropics_anthropic_sdk_go//option",
        "@com_github_anthropics_anthropic_sdk_go//packages/param",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_openai_openai_go//:openai-go",
        "@com_github_openai_openai_go//option",
        "@com_github_openai_openai_go//packages/param",
        "@org_golang_google_genai//:genai",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
