load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "conformancetest_test",
    srcs = ["aisdk_conformance_test.go"],
    deps = [
        "//pkg/runtime",
        "//pkg/testdata/gen/go/testdata",
        "//pkg/testdata/gen/go/testdata/testdatamcp",
        "@com_github_redpanda_data_ai_sdk_go//llm",
        "@com_github_redpanda_data_ai_sdk_go//providers/anthropic",
        "@com_github_redpanda_data_ai_sdk_go//providers/google",
        "@com_github_redpanda_data_ai_sdk_go//providers/openai",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
