load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "basic_lib",
    srcs = ["main.go"],
    importpath = "github.com/redpanda-data/protoc-gen-go-mcp/examples/basic",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/runtime",
        "//pkg/testdata/gen/go/testdata",
        "//pkg/testdata/gen/go/testdata/testdataconnect",
        "//pkg/testdata/gen/go/testdata/testdatamcp",
        "@com_github_mark3labs_mcp_go//server",
    ],
)

go_binary(
    name = "basic",
    embed = [":basic_lib"],
    visibility = ["//visibility:public"],
)
