load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gosdk_lib",
    srcs = ["main.go"],
    importpath = "github.com/redpanda-data/protoc-gen-go-mcp/examples/gosdk",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/runtime",
        "//pkg/runtime/gosdk",
        "//pkg/testdata/gen/go/testdata",
        "//pkg/testdata/gen/go/testdata/testdatamcp",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
    ],
)

go_binary(
    name = "gosdk",
    embed = [":gosdk_lib"],
    visibility = ["//visibility:public"],
)
