load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "generator",
    srcs = ["generator.go"],
    importpath = "github.com/redpanda-data/protoc-gen-go-mcp/pkg/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gen",
        "//pkg/runtime",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_test(
    name = "generator_test",
    size = "small",
    srcs = [
        "compatibility_test.go",
        "edge_cases_test.go",
        "extra_properties_integration_test.go",
        "generator_test.go",
        "golden_test.go",
        "handler_e2e_test.go",
    ],
    data = [
        "//pkg/testdata/gen:descriptors",
        "//pkg/testdata/gen/go/testdata/testdatamcp:mcp_files",
    ],
    embed = [":generator"],
    gotags = ["bazel"],
    deps = [
        "//pkg/runtime",
        "//pkg/runtime/mark3labs",
        "//pkg/testdata/gen/go/testdata",
        "//pkg/testdata/gen/go/testdata/testdatamcp",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_santhosh_tekuri_jsonschema_v5//:jsonschema",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
