load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtime",
    srcs = [
        "error.go",
        "extra_properties.go",
        "file_mode.go",
        "fix.go",
        "server.go",
    ],
    importpath = "github.com/redpanda-data/protoc-gen-go-mcp/pkg/runtime",
    visibility = ["//visibility:public"],
    deps = [
        "@com_connectrpc_connect//:connect",
        "@com_github_redpanda_data_common_go_api//errors",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "runtime_test",
    size = "small",
    srcs = [
        "error_edge_cases_test.go",
        "error_test.go",
        "error_wrapped_bug_test.go",
        "extra_properties_edge_cases_test.go",
        "extra_properties_test.go",
        "file_mode_test.go",
        "fix_bug_hunt_test.go",
        "fix_edge_cases_extra_test.go",
        "fix_edge_cases_test.go",
        "fix_fuzz_test.go",
        "fix_optional_bug_test.go",
        "fix_test.go",
        "fix_wkt_bug_test.go",
        "fix_wkt_wrapper_test.go",
    ],
    embed = [":runtime"],
    deps = [
        "//pkg/testdata/gen/go/testdata",
        "@com_connectrpc_connect//:connect",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
